media/sabnzbd/sabnzbd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    kubernetes.io/metadata.name: sabnzbd
    media-ns: authorized
