media/sabnzbd/sabnzbd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app: sabnzbd
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
        media-app: authorized
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd:4.5.5
        ports:
          - name: http
            containerPort: 8080
        volumeMounts:
          - name: sabnzbd-config
            mountPath: /config
          - name: sabnzbd-downloads
            mountPath: /downloads
        resources:
          requests:
            cpu: 300m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      - name: gluetun
        image: qmcgaw/gluetun:v3.40.0
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      volumes:
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-pvc
        - name: sabnzbd-downloads
          persistentVolumeClaim:
            claimName: sabnzbd-download-pvc
